[project]
name = "lighton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "httpx>=0.27",
    "idun-agent-engine>=0.6.0",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.0.10",
    "langgraph-prebuilt==1.0.8",
    "mcp>=1.27.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "fpdf2>=2.8.7",
    "pytest>=9.0.3",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit the live API",
]
